# TFG_PFH

./: .env.examples  .gitattributes  .gitignore  README.md  __init__.py  llm_clients.py  pytest.ini  requirements.txt  verify_fetch.py  verify_fetch_output.txt  verify_fetch_utf8.py
IMERS/: index.html  package-lock.json  package.json  vite.config.js
IMERS/src/: App.css  App.jsx
IMERS/src-tauri/: Cargo.toml  tauri.conf.json
IMERS/src-tauri/capabilities/: default.json
IMERS/src-tauri/icons/: icon.icns
IMERS/src-tauri/src/: lib.rs  main.rs
agents/: __init__.py  _base.py  analysis_agent.py  dispatch_agent.py  geo_agent.py  procedure_agent.py  tts_agent.py
analysis_cycle/: analysis_runner.py
dashboard/: api.py  api_entry.py
data/: .fuse_hidden0000001100000001  imers.db  imers.db.bak  incidents.db  incidents.db-shm  incidents.db-wal  incidents.db.bak  protocol_cache.json  sevilla_streets.json
pipeline/: __init__.py  graph.py
realtime/: call_receiver.py  call_session.py  streaming_transcriber.py
scripts/: generate_audio.py  seed_incidents.py
test/: audio_e2e_test.py  conftest.py  e2e_comprehensive.py  run_tests.bat  test_agents.py  test_analysis_agent.py  test_classify_incident.py  test_extraction.py  test_get_route.py  test_graph.py  test_pipeline_nodes.py  test_protocol_indexer.py  test_recommend_units.py  test_street_gazetteer.py  test_tools.py  test_tts_agent.py  verify_fixes.py
tools/: __init__.py  build_street_gazetteer.py  classify_incident.py  extract_location.py  get_route.py  protocol_indexer.py  recommend_units.py  street_gazetteer.py
(+55 files in other folders)
