[package]
name = "imers"
version = "2.0.0"
description = "IMERS — Inteligencia Multiagente para Emergencias y Respuesta Sanitaria"
authors = ["Pablo Ferreira Hijón"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the lib name
# different from the binary name. This is because some tools interpret the
# `[lib]` and `[[bin]]` targets as a single root module.
name = "imers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimize to produce better optimized code
opt-level = "s"   # Optimize for binary size
strip = true      # Automatically strip symbols from the binary.
